RESOLVED FIXED66480
Fix "missing return" gcc warning in ScrollAnimatorNone
https://bugs.webkit.org/show_bug.cgi?id=66480
Summary Fix "missing return" gcc warning in ScrollAnimatorNone
Nico Weber
Reported 2011-08-18 10:36:33 PDT
Fix "missing return" gcc warning in ScrollAnimatorNone
Attachments
Patch (1.64 KB, patch)
2011-08-18 10:37 PDT, Nico Weber
no flags
Nico Weber
Comment 1 2011-08-18 10:37:11 PDT
WebKit Review Bot
Comment 2 2011-08-18 11:51:55 PDT
Comment on attachment 104361 [details] Patch Clearing flags on attachment: 104361 Committed r93328: <http://trac.webkit.org/changeset/93328>
WebKit Review Bot
Comment 3 2011-08-18 11:51:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.