Fix "missing return" gcc warning in ScrollAnimatorNone https://bugs.webkit.org/show_bug.cgi?id=66480

Reviewed by Tony Chang.

* platform/ScrollAnimatorNone.cpp:
(WebCore::ScrollAnimatorNone::PerAxisData::curveAt):
(WebCore::ScrollAnimatorNone::PerAxisData::curveDerivativeAt):


Canonical link: https://commits.webkit.org/82324@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@93328 268f45cc-cd09-0410-ab3c-d52691b4dbfc